--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -20,11 +20,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
   color: white;
+  gap: 10px;
 }
 
 .App-inputs {
+  height: 28px;
   margin-inline: 10px;
   display: flex;
   flex-direction: row;
@@ -32,14 +34,14 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
